--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "Andreas Schjønhaug", email = "andreas@schjonhaug.com" }
 ]
-dependencies = []
+dependencies = [
+    "pandas>=2.2.2",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
